# fastapi-citilink

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
core/models/: product.py
core/services/: scraper.py  shop.py
infrastructure/: http.py
infrastructure/db/models/: product.py
infrastructure/db/repositories/: product.py
migrations/: env.py
migrations/versions/: c10c3920cff6_database_creation.py
presentation/asgi/fastapi/: api.py  builder.py
utils/: settings.py
