[tool.poetry]
name = "fastapi-citilink"
version = "0.1.0"
description = ""
authors = ["valentino-sm <5059499+valentino-sm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
punq = "^0.7.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["."]
stubPath = "infrastructure/stubs"

[tool.black]
line-length = 88
preview = true

[tool.ruff]
line-length = 88
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  # "I",   # isort
  "N",   # pep8-naming
  # "D",   # pydocstyle
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",   # flake8-comprehensions
  "C90",   # mccabe
]
ignore = [
  "E402", # module level import not at top of file
]

[tool.ruff.pydocstyle]
convention = "google"

